--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
+body {
+    background-color: #f0f0f0;
+}
+
 .rectangulo {
-    height: 200px;
+    height: 300px;
     max-height: 50%;
     margin: 5px;
-    border: solid 1px black;
+    border: solid 10px white;
+    border-radius: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
