--- a/style.css
+++ b/style.css
@@ -22,7 +22,14 @@ body {
     justify-content: center;
     align-items: center;
     width: 100%;
+    box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.2);
 }
+.color :hover {
+    transition: 0.2s ease;
+    transform: scale(1.05);
+
+}
+
 .rectangulo p {
     font-size: larger;
     font-weight: 700;
